--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.4.1"
+converterGson = "2.11.0"
 glide = "5.0.0-rc01"
 spotify-auth = "2.1.1"
 hiltAndroidCompiler = "2.51.1"
@@ -8,7 +9,7 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 loggingInterceptor = "4.11.0"
 material = "1.12.0"
 activity = "1.9.0"
@@ -18,17 +19,17 @@ ksp = "2.0.0-1.0.21"
 dagger-hilt = "2.51.1"
 retrofit = "2.11.0"
 legacySupportV4 = "1.0.0"
-lifecycleLivedataKtx = "2.8.0"
-lifecycleViewmodelKtx = "2.8.0"
+lifecycleLivedataKtx = "2.8.1"
+lifecycleViewmodelKtx = "2.8.1"
 fragmentKtx = "1.7.1"
 navigationFragmentKtx = "2.7.7"
-safe-args = "2.7.7"
 navigationUiKtx = "2.7.7"
 timber = "5.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigationSafeArgsGradlePlugin" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 spotify-auth = { module = "com.spotify.android:auth", version.ref = "spotify-auth" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidCompiler" }
