--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,10 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.proto.ProtoActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true"
-            android:launchMode="singleTop">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -37,6 +35,7 @@
                     android:scheme="ceriaauthresponse" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
