--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.4.1"
 converterGson = "2.11.0"
 coreSplashscreen = "1.0.1"
 glide = "5.0.0-rc01"
+navigationRuntimeKtx = "2.5.3"
 spotify-auth = "2.1.1"
 hiltAndroidCompiler = "2.51.1"
 kotlin = "2.0.0"
@@ -15,7 +16,7 @@ loggingInterceptor = "4.11.0"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
-navigationSafeArgsGradlePlugin = "2.7.7"
+navigationSafeArgsGradlePlugin = "2.5.3"
 ksp = "2.0.0-1.0.21"
 dagger-hilt = "2.51.1"
 retrofit = "2.11.0"
@@ -23,8 +24,8 @@ legacySupportV4 = "1.0.0"
 lifecycleLivedataKtx = "2.8.2"
 lifecycleViewmodelKtx = "2.8.2"
 fragmentKtx = "1.8.0"
-navigationFragmentKtx = "2.7.7"
-navigationUiKtx = "2.7.7"
+navigationFragmentKtx = "2.5.3"
+navigationUiKtx = "2.5.3"
 timber = "5.0.1"
 cardview = "1.0.0"
 datastorePreferences = "1.1.1"
@@ -32,6 +33,7 @@ datastorePreferences = "1.1.1"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-navigation-runtime-ktx = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
 androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigationSafeArgsGradlePlugin" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
